src/shared/ui/select-chat-modal/select-chat-modal.module.scss
@use 'shared/styles/03_mixins' as mixins;

.backdrop {
  position: fixed;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  background-color: rgba(149, 135, 245, 0.4);
  @include mixins.flex-box(center, center);
  z-index: 1;
}

.modal {
  background-color: var(--surface-base);
  border-radius: 0.8rem;
  width: 36rem;
  height: 52rem;
  position: relative;
}

.header {
  @include mixins.flex-box($justify: space-between);
  height: 4.4rem;
  padding: 0 1.6rem;
  border-bottom: 0.1rem solid var(--border-layout);
}

.title {
  font-size: 16px;
}

.search {
  padding: 0.8rem 1.6rem;
  border-bottom: 0.1rem solid var(--border-layout);
}

